# Provenas

./: .gitignore  CONCLUSIONS.md  README.md  pyproject.toml  requirements.txt
docs/: index.html  tutorial.html
examples/: access_audit.py  demo.py  eligibility_screening.py  service_sidecar.py
experiments/: dispatcher.py  grounding_count.py  grounding_mult.py  item1_loops.py  item2_lists.py  item4_interpret.py  item5_curriculum.py  kg_demo.py  kg_reasoner.py  m1_cliff.py  m2_error_heads.py  m3_stacked_cliffs.py  m4_gen_dataset.py  m4_parsing_vs_computing.py  m4_plot.py  make_it_useful.py  perf_benchmark.py  probe_a_parity.py  probe_b_discover.py  probe_b_hard.py  rewrite_engine.py  rule_learning.py  rules_toy.py  scratchpad.py  state_drift.py  tool_synthesis.py  tools_demo.py  typed_engine.py  validator_distill.py  variables.py
provenas/: __init__.py  __main__.py  bankaccount.py  calculator.py  chartok.py  cli.py  dataset.py  domains.py  encoders.py  engine.py  exprgen.py  generate.py  infer.py  kg.py  kgvm.py  learn.py  llm.py  losses.py  metrics.py  models.py  models_char.py  models_seq.py  models_seq2seq.py  models_transformer.py  models_tree.py  plotting.py  qa.py  reducer.py  regvm.py  rewrite.py  semantic.py  server.py  solver.py  stackvm.py  store.py  strata.py  tokenize_expr.py  toolsmith.py  train.py  typed.py  (+1 more)
tests/: sanity.py  test_core.py  test_examples.py  test_perf.py  test_reallife.py  test_research.py  test_stress.py
